[project]
name = "bcsb-prod"
version = "1.0.0"
description = "BCSB Production"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.7",
    "django-celery-beat>=2.7.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.38",
    "waitress>=3.0.2",
    "whitenoise>=6.9.0",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "oracledb>=2.5.0",
    "pydantic>=2.10.6",
    "setuptools>=75.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "cdutils",
    "playwright>=1.52.0",
    "xlsxwriter>=3.2.5",
    "xlrd>=2.0.2",
    "lxml>=6.0.0",
    "pytest>=8.4.1",
    "pip>=25.1.1",
    "reportlab>=4.4.3"
]

[tool.uv.sources]
cdutils = { path = 'cdutils', editable = true }
